<resources>
    <string name="app_name">Github User App</string>
    <string name="space_repositories"><![CDATA[ repositories]]></string>
    <string name="repositories">Repositories</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="user_profile">User Profile</string>
    <string name="github">github</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="reminder">Daily Reminder</string>
    <string name="favorite">Favorite</string>
    <string name="has_deleted">Data has been deleted</string>
    <string name="alarm_time">Alarm Time</string>
    <string name="reminder_message">Enter a reminder message</string>
    <string name="cancel_reminder">Cancel Reminder</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="search_hint">Enter username</string>
    <string name="error_title">Something\'s Wrong</string>
    <string name="no_user_favorite">No users in favorites</string>
</resources>