<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_favorite"
        android:icon="@drawable/ic_favorite_24"
        android:title="@string/favorite"
        app:showAsAction="always" />

    <item
        android:icon="@drawable/ic_settings_24"
        android:title="@string/settings"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/action_language"
                android:icon="@drawable/ic_language_24"
                app:showAsAction="ifRoom"
                android:title="@string/language" />

            <item android:id="@+id/action_reminder"
                android:icon="@drawable/ic_add_alarm_24"
                app:showAsAction="ifRoom"
                android:title="@string/reminder" />

        </menu>
    </item>
</menu>