<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.ReminderActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/general_padding"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/btnTimer"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/dark_blue_grey"
            android:src="@drawable/ic_add_alarm_24"
            app:tint="@color/white"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/tvTimer"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginHorizontal="@dimen/content_padding"
            android:gravity="center_vertical"
            android:text="@string/alarm_time"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/reminderMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/general_padding"
        android:hint="@string/reminder_message"
        android:importantForAutofill="no"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/general_padding"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnCancelReminder"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginEnd="@dimen/general_padding"
            android:layout_weight="1"
            android:text="@string/cancel_reminder" />

        <Button
            android:id="@+id/btnSetReminder"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:text="@string/set_reminder" />
    </LinearLayout>

</LinearLayout>