<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.UserDetailActivity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="@dimen/general_padding"
        android:layout_marginTop="@dimen/general_padding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable"
        tools:ignore="ContentDescription"
        app:tint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/general_padding"
        android:layout_marginTop="@dimen/general_padding"
        android:text="@string/user_profile"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/black"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/userImage"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/user1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnBack" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_padding"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userImage" />

    <TextView
        android:id="@+id/userAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <ImageView
        android:id="@+id/icBuilding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_padding"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/userAccount"
        app:srcCompat="@drawable/ic_building"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/userCompany"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:gravity="bottom"
        android:layout_marginTop="@dimen/general_padding"
        android:layout_marginStart="@dimen/text_spacing"
        app:layout_constraintStart_toEndOf="@+id/icBuilding"
        app:layout_constraintTop_toBottomOf="@+id/userAccount"
        android:textColor="@color/black"/>

    <ImageView
        android:id="@+id/icLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/content_padding"
        app:layout_constraintStart_toStartOf="@+id/icBuilding"
        app:layout_constraintTop_toBottomOf="@+id/icBuilding"
        app:srcCompat="@drawable/ic_location"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/userLocation"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:gravity="bottom"
        android:layout_marginTop="@dimen/content_padding"
        android:layout_marginStart="@dimen/text_spacing"
        app:layout_constraintStart_toEndOf="@+id/icLocation"
        app:layout_constraintTop_toBottomOf="@+id/userCompany"
        android:textColor="@color/black"/>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_padding"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icLocation">

        <LinearLayout
            android:id="@+id/containerRepo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/totalRepo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repositories" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/totalFollowers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/followers" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/containerFollower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/totalFollowing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/following" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/general_padding"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <Button
            android:id="@+id/btnGithub"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/dark_blue_grey"
            android:paddingHorizontal="30dp"
            android:text="@string/github"
            app:cornerRadius="25dp"
            app:icon="@drawable/ic_github"
            style="?android:attr/colorButtonNormal" />

        <Button
            android:id="@+id/btnShare"
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:layout_marginStart="@dimen/general_padding"
            android:paddingHorizontal="8dp"
            android:text="@string/horizontal_dots"
            android:textColor="@color/black"
            app:cornerRadius="25dp"
            android:backgroundTint="@color/white"
            style="?android:attr/colorButtonNormal"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>